--- a/nextjs-task-manager/package.json
+++ b/nextjs-task-manager/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
